# twin-navigator

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  FilePanel.h  MainWindow.cpp  MainWindow.h  MarkableItem.h  PanelWidget.cpp  PanelWidget.h  README.md  TODO.md  main.cpp
editor/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  editorwindow.cpp  editorwindow.h
res/: icons.qrc
